css(bus): add warning icon

--- a/src/common/style/variables.scss
+++ b/src/common/style/variables.scss
@@ -5,6 +5,8 @@
 // colors
 $primary-color: #ffe000;
 $secondary-color: #005fb0;
+$warning-color: #f13b00f7;
+
 $background-color-dark: #1d1c20;
 $background-color-light: #fafafa;
 
