--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -39,6 +39,11 @@
             justify-content: center;
             font-size: 1.1rem;
             font-weight: 600;
+
+            .material-icons {
+                margin-right: 6px;
+                color: $warning-color;
+            }
         }
     }
 }
