--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -40,9 +40,14 @@
             font-size: 1.1rem;
             font-weight: 600;
 
-            .material-icons {
-                margin-right: 6px;
+            &--danger {
+                display: flex;
+                align-items: center;
                 color: $warning-color;
+                .material-icons {
+                    margin: 2px 6px 0 0;
+                    color: $warning-color;
+                }
             }
         }
     }
