feat(app): add responsiveness

--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -2,7 +2,7 @@
 
 .Bus {
     background-color: $background-color-light;
-    width: 30%;
+    margin: 2% 1%;
 
     &__header {
         border-bottom: 1px solid $black-12;
