--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,6 @@
 
   &__header {
     background-color: $primary-color;
-    min-height: 10vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,8 +37,6 @@
       width: 100%;
     }
     &__bus {
-      display: flex;
-      justify-content: space-evenly;
       padding: 2% 0;
     }
   }
@@ -50,4 +47,44 @@
   25% {transform:rotate(-15deg);}
   75% {transform:rotate(15deg);}
   100% {transform:rotate(0deg);}
+}
+
+// Responsivity
+
+@media screen and (min-width: 0em) and (max-width: 40em) {
+  .App__header {
+    min-height: 6vh;
+  }
+}
+
+@media screen and (min-width: 40em) and (max-width: 60em) {
+  .App__header {
+    min-height: 8vh;
+  }
+
+  .App__content__bus {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .Bus {
+    flex: 0 1 calc(50% - 2em);
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .App__header {
+    min-height: 10vh;
+  }
+
+  .App__content__bus {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+   
+  .Bus {
+    flex: 0 1 calc(33% - 2em);
+  }
 }
