--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -40,15 +40,35 @@
             font-size: 1.1rem;
             font-weight: 600;
 
-            &--danger {
+            .material-icons {
+                display: none;
+            }
+
+            &--hurry {
                 display: flex;
                 align-items: center;
                 color: $warning-color;
+                
                 .material-icons {
+                    display: block;
                     margin: 2px 6px 0 0;
                     color: $warning-color;
                 }
             }
+
+            &--hurry-now {
+                display: flex;
+                align-items: center;
+                color: $warning-color;
+                
+                animation: blinker 1.2s ease infinite;
+            }
         }
     }
 }
+
+@keyframes blinker {
+    50% {
+      opacity: 20%;
+    }
+  }
