feat(app): manage favorite bus - unfavorite not working

--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -18,6 +18,10 @@
             color: $white-100;
         }
 
+        .favorite-true {
+            color: $primary-color;
+        }
+
         .header-subheader {
             display: flex;
             justify-content: center;
