--- a/src/components/bus/bus.scss
+++ b/src/components/bus/bus.scss
@@ -19,7 +19,7 @@
         }
 
         .favorite-true {
-            color: $primary-color;
+            color: $warning-color;
         }
 
         .header-subheader {
