feat(settings): start autocomplete for stop list

--- a/src/components/settings/settings.scss
+++ b/src/components/settings/settings.scss
@@ -2,6 +2,7 @@
 
 .Settings {
     display: flex;
+    align-items: center;
     justify-content: center;
     color: $white-100;
     font-size: 1.3rem;
