--- a/src/components/stop-list/stop-list.scss
+++ b/src/components/stop-list/stop-list.scss
@@ -1,5 +1,60 @@
 @import "../../common/style/variables.scss";
 
 .stop-list {
-    color: $black-87;
+    margin-left: 2rem;
+
+    &__autocomplete {
+        display: flex;
+        flex-direction: column;
+        color: $black-87;
+
+        &__input {
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid $white-70;
+            font-size: 16px;
+            font: inherit;
+            color: $white-100;
+            width: 20rem;
+
+            &:focus {
+                outline: 0;
+                border-bottom-color: $primary-color;
+            }
+        }
+
+        
+          
+        &__dropdown {
+            overflow: auto;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            position: absolute;
+            max-height: 256px;
+            max-width: none;
+            min-width: 112px;
+            width: 20rem;
+
+            &__item {
+                line-height: 48px;
+                height: 48px;
+                padding: 0 16px;
+                font-size: 16px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                position: relative;
+                cursor: pointer;
+                text-transform: none;
+                text-decoration: none;
+                outline: 0;
+                display: flex;
+                flex-direction: row;
+                max-width: 100%;
+                box-sizing: border-box;
+                align-items: center;
+                -webkit-tap-highlight-color: transparent;
+            }
+        }
+    }
 }
