--- a/src/components/stop-list/stop-list.scss
+++ b/src/components/stop-list/stop-list.scss
@@ -9,6 +9,7 @@
         color: $black-87;
 
         &__input {
+            margin-top: 4px;
             background-color: transparent;
             border: none;
             border-bottom: 1px solid $white-70;
@@ -30,10 +31,14 @@
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
             position: absolute;
-            max-height: 256px;
+            margin-top: 34px;
+            max-height: 300px;
             max-width: none;
             min-width: 112px;
             width: 20rem;
+            box-shadow: 0px 2px 4px -1px rgba(#000, .2),
+                        0px 4px 5px 0px rgba(#000, .14),
+                        0px 1px 10px 0px rgba(#000, .12);
 
             &__item {
                 line-height: 48px;
