--- a/src/components/stop-list/stop-list.scss
+++ b/src/components/stop-list/stop-list.scss
@@ -1,22 +1,23 @@
 @import "../../common/style/variables.scss";
 
 .stop-list {
-    margin-left: 2rem;
+    display: flex;
 
     &__autocomplete {
+        margin-left: 6px;
         display: flex;
         flex-direction: column;
         color: $black-87;
 
         &__input {
-            margin-top: 4px;
+            margin-top: 3px;
             background-color: transparent;
             border: none;
             border-bottom: 1px solid $white-70;
             font-size: 16px;
             font: inherit;
             color: $white-100;
-            width: 20rem;
+            width: 15rem;
 
             &:focus {
                 outline: 0;
@@ -28,14 +29,15 @@
           
         &__dropdown {
             overflow: auto;
+            z-index: 300;
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
             position: absolute;
-            margin-top: 34px;
+            margin-top: 33px;
             max-height: 300px;
             max-width: none;
             min-width: 112px;
-            width: 20rem;
+            width: 15rem;
             box-shadow: 0px 2px 4px -1px rgba(#000, .2),
                         0px 4px 5px 0px rgba(#000, .14),
                         0px 1px 10px 0px rgba(#000, .12);
