--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   flex: 1 1 auto;
   flex-direction: column;
   background-color: $background-color-dark;
+  overflow-y: hidden;
 
   &__header {
     background-color: $primary-color;
@@ -28,17 +29,18 @@
   }
 
   &__content {
-    padding: 2%;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 
     &__settings {
-      width: 100%;
+      padding: 2%;
     }
+
     &__bus {
       display: flex;
       flex-direction: column;
-      padding: 2% 0;
+      padding: 2%;
 
       &__title {
         display: flex;
@@ -72,11 +74,17 @@
   .App__header {
     min-height: 6vh;
   }
+  .App__content {
+    height: 94vh;
+  }
 }
 
 @media screen and (min-width: 40em) and (max-width: 60em) {
   .App__header {
     min-height: 8vh;
+  }
+  .App__content {
+    height: 92vh;
   }
 
   .App__content__bus__section {
@@ -94,6 +102,10 @@
   .App__header {
     min-height: 10vh;
   }
+  .App__content {
+    height: 90vh;
+  }
+
   .App__content__bus__section {
     display: flex;
     flex-wrap: wrap;
@@ -108,6 +120,10 @@
   .App__header {
     min-height: 10vh;
   }
+  .App__content {
+    height: 90vh;
+  }
+
   .App__content__bus__section {
     display: flex;
     flex-wrap: wrap;
